--- a/FrontEnd/src/App.css
+++ b/FrontEnd/src/App.css
@@ -192,7 +192,7 @@
     border-bottom: 1px solid #cccccc4c;
     box-shadow: 0 1px 2px rgba(0,0,0,0.1);
     background-color: #ffffff;
-    position: sticky;
+    position: fixed;
 }
 .searchBar{
    display: inline-flex;
